cli: move `PhobosActionContext` and `BaseOptHandler`
Due to the CLI reorganization, base classes of Phobos CLI are moved to
an internal file.

Change-Id: I54cb998ade3867dd59215d724e3cdb0140b54916
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14099
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -5,6 +5,8 @@ C_MODULES_SO=phobos/core/const.so \
 
 EXTRA_DIST=phobos/__init__.py \
 	   phobos/output.py \
+	   phobos/cli/__init__.py \
+	   phobos/cli/common/__init__.py \
 	   phobos/core/__init__.py \
 	   phobos/core/admin.py \
 	   phobos/core/cfg.py \
