cli: add `args` utility module in `cli.common` package
This module will be used to merge behaviors of arguments parser.

In this patch, the arguments of the `put` command are moved to the
`args` module as they will be shared with the `copy create` command.

Change-Id: I7b55f0e3e9879818c26532abb11ff87930b8fa12
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14101
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -7,6 +7,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/output.py \
 	   phobos/cli/__init__.py \
 	   phobos/cli/common/__init__.py \
+	   phobos/cli/common/args.py \
 	   phobos/core/__init__.py \
 	   phobos/core/admin.py \
 	   phobos/core/cfg.py \
