cli: attach `copy` target to CLI
For now, any `copy` command will return an NotImplementedError, until
the implementation is done.

Change-Id: Icbaf9029ba8ea1bb7b91e83443e7c7fbccfd440b
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14103
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -6,8 +6,14 @@ C_MODULES_SO=phobos/core/const.so \
 EXTRA_DIST=phobos/__init__.py \
 	   phobos/output.py \
 	   phobos/cli/__init__.py \
+	   phobos/cli/action/__init__.py \
+	   phobos/cli/action/create.py \
+	   phobos/cli/action/delete.py \
+	   phobos/cli/action/list.py \
 	   phobos/cli/common/__init__.py \
 	   phobos/cli/common/args.py \
+	   phobos/cli/target/__init__.py \
+	   phobos/cli/target/copy.py \
 	   phobos/core/__init__.py \
 	   phobos/core/admin.py \
 	   phobos/core/cfg.py \
