--- a/src/io-modules/Makefile.am
+++ b/src/io-modules/Makefile.am
@@ -11,12 +11,14 @@ pkglib_LTLIBRARIES=libpho_io_adapter_posix.la libpho_io_adapter_ltfs.la
 
 libpho_io_adapter_posix_la_SOURCES=io_posix.c io_posix_common.c
 libpho_io_adapter_posix_la_CFLAGS=-fPIC $(AM_CFLAGS)
-libpho_io_adapter_posix_la_LIBADD=../common/libpho_common.la libpho_mapper.la
+libpho_io_adapter_posix_la_LIBADD=../common/libpho_common.la libpho_mapper.la \
+                                  ../cfg/libpho_cfg.la
 libpho_io_adapter_posix_la_LDFLAGS=-version-info 0:0:0
 
 libpho_io_adapter_ltfs_la_SOURCES=io_ltfs.c io_posix_common.c
 libpho_io_adapter_ltfs_la_CFLAGS=-fPIC $(AM_CFLAGS)
-libpho_io_adapter_ltfs_la_LIBADD=../common/libpho_common.la libpho_mapper.la
+libpho_io_adapter_ltfs_la_LIBADD=../common/libpho_common.la libpho_mapper.la \
+                                 ../cfg/libpho_cfg.la
 libpho_io_adapter_ltfs_la_LDFLAGS=-version-info 0:0:0
 
 if RADOS_ENABLED
@@ -24,6 +26,7 @@ pkglib_LTLIBRARIES+=libpho_io_adapter_rados.la
 libpho_io_adapter_rados_la_SOURCES=io_rados.c io_posix_common.c
 libpho_io_adapter_rados_la_CFLAGS=-fPIC $(AM_CFLAGS)
 libpho_io_adapter_rados_la_LIBADD=../common/libpho_common.la libpho_mapper.la \
-                                  ../ldm/libpho_ldm.la -lrados
+                                  ../ldm/libpho_ldm.la ../cfg/libpho_cfg.la \
+                                  -lrados
 libpho_io_adapter_rados_la_LDFLAGS=-version-info 0:0:0
 endif
