tests: add tests for copy list
Change-Id: I6905fb68f863674867a887b48ae859d97b7e8fb2
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14114
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -45,6 +45,7 @@ check_PROGRAMS=test_fair_share \
 
 check_SCRIPTS=acceptance.test \
               test_compatible_drive_exists.test \
+              test_copy_list.test \
               test_delete.test \
               test_drive_list.test \
               test_drive_lookup.test \
