cfg: add get_preferred_order for copies
This patch allows one to set a get_preferred_order to use when
retrieving copies. This option is not yet used.

Change-Id: Ib1538172e767cb3099400b218295eabc35b13a27
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14168
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/tests/interns/Makefile.am
+++ b/tests/interns/Makefile.am
@@ -46,6 +46,7 @@ check_PROGRAMS=test_attrs \
                test_cfg \
                test_common \
                test_communication \
+               test_copy_cfg \
                test_dev_tape \
                test_dss_copy \
                test_dss_extent \
@@ -89,6 +90,10 @@ test_common_CFLAGS=$(AM_CFLAGS) -I..
 test_communication_SOURCES=test_communication.c
 test_communication_LDADD=$(COMMUNICATION_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_communication_CFLAGS=$(AM_CFLAGS) -I..
+
+test_copy_cfg_SOURCES=test_copy_cfg.c
+test_copy_cfg_LDADD=$(CFG_LIB) $(COMMON_LIB)
+test_copy_cfg_CFLAGS=$(AM_CFLAGS) -I..
 
 test_dev_tape_SOURCES=test_dev_tape.c
 test_dev_tape_LDADD=$(SCSI_TAPE_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
