--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -198,6 +198,9 @@ library = legacy
 [copy]
 default_copy_name = source
 
+# List of copies to be retrieved in priority order
+get_preferred_order=fast,cache
+
 ######### Tape/drive support and compatibility rules ########
 # You should not modify the following configuration unless:
 #  * You want to add support for a new device or tape model
