doc: add doc of "check_hash" option for raid1/raid4 layout in the template
Change-Id: I1e139949f7c11949c3e5a8547f8d0609a37c66d0
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14175
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -158,8 +158,36 @@ repl_count = 2
 # written extent.
 #
 # Default: false (true if Phobos is not compiled with xxh128 support)
-#
 # extent_md5 = false
+
+# Boolean value to indicate whether Phobos should verify checksum integrity of
+# each written extent when doing a get operation.
+#
+# Default: true
+# check_hash = true
+
+[layout_raid4]
+# Boolean value to indicate whether Phobos should compute the XXHASH128 value of
+# each written extent.
+#
+# In environments where xxhash has a version lower than 0.8.0, this parameter is
+# ignored and the xxh128 is not computed. If set to "true", the client will
+# issue a warning to indicate this inconsistency.
+#
+# Default: true (false if Phobos is not compiled with xxh128 support)
+# extent_xxh128 = true
+
+# Boolean value to indicate whether Phobos should compute the MD5 value of each
+# written extent.
+#
+# Default: false (true if Phobos is not compiled with xxh128 support)
+# extent_md5 = false
+
+# Boolean value to indicate whether Phobos should verify checksum integrity of
+# each written extent when doing a get operation.
+#
+# Default: true
+# check_hash = true
 
 [profile "simple"]
 # default profile for put operations
