tests: add test for dss_find_object function
Change-Id: Ic838d3abae99ce2e951d9086e5f34c9d7104a5b3
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14268
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/interns/Makefile.am
+++ b/tests/interns/Makefile.am
@@ -50,6 +50,7 @@ check_PROGRAMS=test_attrs \
                test_dev_tape \
                test_dss_copy \
                test_dss_extent \
+               test_dss_find_object \
                test_dss_lazy_find_object \
                test_dss_lock \
                test_dss_logs \
@@ -106,6 +107,11 @@ test_dss_extent_CFLAGS=$(AM_CFLAGS) $(TESTS_LIB_INCLUDES)
 test_dss_copy_SOURCES=test_dss_copy.c
 test_dss_copy_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_dss_copy_CFLAGS=$(AM_CFLAGS) $(TESTS_LIB_INCLUDES)
+
+test_dss_find_object_SOURCES=test_dss_find_object.c
+test_dss_find_object_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_dss_find_object_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/store \
+                            $(TESTS_LIB_INCLUDES)
 
 test_dss_lazy_find_object_SOURCES=test_dss_lazy_find_object.c
 test_dss_lazy_find_object_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
