cfg: change [tlc_lib] to [tlc "lib"] config section names
This modification standardizes the way configuration instances are
defined. The chosen format is the one used for profiles.

BREAKING CHANGE: configuration files need to be modified accordingly.

Change-Id: I54414d81d245d950839af573868ab78ce9262019
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14279
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -83,15 +83,15 @@ library = legacy
 [copy]
 default_copy_name = source
 
-[tlc_legacy]
+[tlc "legacy"]
 hostname = localhost
 port = 20123
 lib_device = /dev/changer
 
-[tlc_library_bis]
+[tlc "library_bis"]
 hostname = localhost
 port = 20124
 lib_device = /dev/changer_bis
 
-[tlc_bad_library]
+[tlc "bad_library"]
 lib_device = /no_existing_dev_changer
