--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -23,6 +23,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/target/__init__.py \
 	   phobos/cli/target/copy.py \
 	   phobos/cli/target/device.py \
+	   phobos/cli/target/dir.py \
 	   phobos/cli/target/drive.py \
 	   phobos/core/__init__.py \
 	   phobos/core/admin.py \
