cli: move TapeOptHandler to target/tape.py
Change-Id: I53c68cdc8d1622f0f44900918365e7b0ee690b0e
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14305
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -25,6 +25,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/target/device.py \
 	   phobos/cli/target/dir.py \
 	   phobos/cli/target/drive.py \
+	   phobos/cli/target/tape.py \
 	   phobos/core/__init__.py \
 	   phobos/core/admin.py \
 	   phobos/core/cfg.py \
