store: add copy name to get
This patch adds the `--copy-name` parameter to the get call, in order to
retrieve a specific copy of an object.

Change-Id: Icaa611d3c9de8a42e4baed68bc99d9951794c6a4
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14311
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -57,7 +57,7 @@ check_SCRIPTS=acceptance.test \
               test_fair_share.test \
               test_file_after_put.test \
               test_format.test \
-              test_get.sh \
+              test_get.test \
               test_group_sync.sh \
               test_grouping.test \
               test_import.test \
