store: update object list with the new arguments
This patch updates the store object list function to handle the new
arguments for the object commands. Objects can now be filtered by
version and UUID.

By default, it only displays only alive objects. By modifying the
scope, it can display either only deprecated objects or both.

Change-Id: I289f19b4e3545c8dcdd67924c41235ea449f83e0
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14397
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -73,7 +73,7 @@ check_SCRIPTS=acceptance.test \
               test_media_delete.test \
               test_multilibrary.test \
               test_mput_no_split.test \
-              test_object_list.sh \
+              test_object_list.test \
               test_phobos_tape_library_test.sh \
               test_ping.test \
               test_put.test \
