doc: add man page of the phobos conf
This patch initializes the man page of the phobos conf. It also modifies
the Makefile to install it with a 'make install' or 'make rpm'.

Change-Id: I6993876a3a3054a37d1c4c2e5bc832d2807f8cbf
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14452
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ gen-proto.stamp
 /src/lrs/phobosd
 /src/tlc/tlc
 /tape_library_certification/phobos_tape_library_test
+doc/man/build/doctrees/
+gen-man.stamp
