--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ACLOCAL_AMFLAGS = -I autotools/m4
 
 SUBDIRS=. src tests tests/externs/api tests/externs/cli tests/interns \
-        tests/prod tape_library_certification
+        tests/prod tape_library_certification doc/man
 
 rpm_dir=`pwd`/rpms
 
@@ -15,8 +15,12 @@ rpm: dist phobos.spec
 	mkdir -p $(rpm_dir)/BUILD $(rpm_dir)/SPECS $(rpm_dir)/SRPMS $(rpm_dir)/RPMS
 	rpmbuild $(options) --define="_topdir $(rpm_dir)" -ta $(distdir).tar.gz
 
+man:
+	$(MAKE) -C doc/man
+
 EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper \
-	    scripts/phobos_db README.md doc/cfg/template.conf
+	    scripts/phobos_db README.md doc/cfg/template.conf $(dist_man_MANS) \
+	    doc/man/source
 
 sbin_SCRIPTS=scripts/pho_ldm_helper \
              scripts/phobos_db
