packaging: addin new cli files
Some new files were forgotten from phobos python cli to rpm.

Change-Id: I648aeb7b7504df525dd483645ac35eb58c351666
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14512
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -8,6 +8,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/__init__.py \
 	   phobos/cli/action/__init__.py \
 	   phobos/cli/action/add.py \
+	   phobos/cli/action/clean.py \
 	   phobos/cli/action/create.py \
 	   phobos/cli/action/delete.py \
 	   phobos/cli/action/format.py \
@@ -25,6 +26,11 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/target/device.py \
 	   phobos/cli/target/dir.py \
 	   phobos/cli/target/drive.py \
+	   phobos/cli/target/extent.py \
+	   phobos/cli/target/lib.py \
+	   phobos/cli/target/lock.py \
+	   phobos/cli/target/media.py \
+	   phobos/cli/target/object.py \
 	   phobos/cli/target/rados.py \
 	   phobos/cli/target/tape.py \
 	   phobos/core/__init__.py \
