copy: link copy name with a profile
This patch links a copy name, specified via the put or copy create
commands, to a profile defined in the configuration. If a copy name is
associated with a profile, that profile will be used by default.
However, it can be overridden using options such as --family,
--layout, etc.

Change-Id: Id9b347cd7af29dcc09e3930a1f2c6d4f2e755009
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14634
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -76,7 +76,7 @@ check_SCRIPTS=acceptance.test \
               test_object_list.sh \
               test_phobos_tape_library_test.sh \
               test_ping.test \
-              test_put.sh \
+              test_put.test \
               test_raid1.test \
               test_raid4.test \
               test_rename.test \
