--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -79,9 +79,25 @@ layout = raid1
 tags = no-tag-1,no-tag-2
 library = legacy
 
+[profile "fast"]
+family = dir
+layout = raid1
+lyt-params = repl_count=1
+tags = fast
+
+[profile "tape"]
+family = tape
+layout = raid4
+
 [copy]
 default_copy_name = source
 get_preferred_order = fast,cache
+
+[copy "cache"]
+profile=fast
+
+[copy "archive"]
+profile=tape
 
 [tlc "legacy"]
 hostname = localhost
