spec: adding pyhton3-sphinx build dependency
The build now needs the python3-sphinx dependency.

Change-Id: Ic7bb9e92566bc8695718935857a3535b0ad6e50d
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14795
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -45,6 +45,7 @@ BuildRequires: xxhash-devel
 BuildRequires: libcmocka-devel
 BuildRequires: libuuid-devel
 BuildRequires: python3-argcomplete
+BuildRequires: python3-sphinx
 
 Requires: %{postgres_prefix}-server
 Requires: %{postgres_prefix}-contrib
