doc: update template configuration file
This patch updates the template configuration file since the default
library does not use the `legacy` name, and the documentation for it is
wrong.

Change-Id: I1f3fc7215ef4a3caf27ad1d78fcb7b365e8ec9fb
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14831
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -256,11 +256,10 @@ drive_rw = LTO8_drive,LTO9_drive
 drive_rw = LTO9_drive
 
 # Tape Library Controler, one tlc section per library.
-# The section name must be the concatenation of the prefix "tlc_"
-# followed by the "library_name".
+# The section name must be "tlc" followed by the name of your library.
 # (The default library name is defined by the above store section
 # default_tape_library parameter.)
-[tlc "library_name"]
+[tlc "legacy"]
 # Server address
 hostname = localhost
 port = 20123
