project: remove proto directory
Having both proto and serializer separated is not really motivated, and
imply file movements.

Also, merge serializer libraries.

Change-Id: I95df9a8f99b3b8346b749a4f4aa6abc25064833d
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14852
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -1,7 +1,6 @@
-SUFFIXES = .pb-c.h
-
-protodir=../proto
+protodir=../serializer
 proto_headers=pho_proto_common.pb-c.h pho_proto_lrs.pb-c.h pho_proto_tlc.pb-c.h
+
 noinst_HEADERS=pho_cache.h \
                pho_cfg.h \
                pho_comm.h \
