project: move core modules of phobos in core directory
This new directory will be used as the root of the new core library,
which aggregates core modules of phobos.

Change-Id: I3db5f6bdb7666994e19f46cb7257e5796ecf84bf
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14853
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AM_CFLAGS= $(CC_OPT)
 
-SUBDIRS=include serializer common communication module-loader ldm dss cfg \
-        daemon ldm-modules io io-modules layout store \
+SUBDIRS=include core/serializer core/common core/communication module-loader \
+        ldm core/dss core/cfg daemon ldm-modules io io-modules layout store \
         layout-modules admin lrs cli tlc
