--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -1,4 +1,4 @@
-protodir=../serializer
+protodir=../core/serializer
 proto_headers=pho_proto_common.pb-c.h pho_proto_lrs.pb-c.h pho_proto_tlc.pb-c.h
 
 noinst_HEADERS=pho_cache.h \
