--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -27,14 +27,14 @@ phobosd_SOURCES=health.h health.c \
                 $(IO_SCHEDULERS)
 
 phobosd_CFLAGS=$(AM_CFLAGS)
-phobosd_LDADD=../dss/libpho_dss.la \
-              ../cfg/libpho_cfg.la \
+phobosd_LDADD=../core/dss/libpho_dss.la \
+              ../core/cfg/libpho_cfg.la \
               ../ldm/libpho_ldm.la \
               ../module-loader/libpho_module_loader.la \
               ../io/libpho_io.la \
-              ../serializer/libpho_serializer.la \
-              ../communication/libpho_comm.la \
-              ../common/libpho_common.la \
+              ../core/serializer/libpho_serializer.la \
+              ../core/communication/libpho_comm.la \
+              ../core/common/libpho_common.la \
               ../daemon/libpho_daemon.la
 
 phobosd_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
