--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -7,12 +7,12 @@ AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
 ADMIN_LIB=$(TO_SRC)/admin/libphobos_admin.la
-CFG_LIB=$(TO_SRC)/cfg/libpho_cfg.la
-COMMON_LIB=$(TO_SRC)/common/libpho_common.la
-COMMUNICATION_LIB=$(TO_SRC)/communication/libpho_comm.la
-DSS_LIB=$(TO_SRC)/dss/libpho_dss.la
+CFG_LIB=$(TO_SRC)/core/cfg/libpho_cfg.la
+COMMON_LIB=$(TO_SRC)/core/common/libpho_common.la
+COMMUNICATION_LIB=$(TO_SRC)/core/communication/libpho_comm.la
+DSS_LIB=$(TO_SRC)/core/dss/libpho_dss.la
 LRS_LIB=$(TO_SRC)/lrs/libpho_lrs.la
-SERIALIZER_LIB=$(TO_SRC)/serializer/libpho_serializer.la
+SERIALIZER_LIB=$(TO_SRC)/core/serializer/libpho_serializer.la
 STORE_LIB=$(TO_SRC)/store/libphobos_store.la
 SCSI_LIB=$(TO_SRC)/tlc/scsi/libpho_scsi.la
 TLC_LIB=$(TO_SRC)/tlc/libpho_tlc.la
@@ -112,4 +112,4 @@ lrs_simple_client_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs
 medium_locker_SOURCES=medium_locker.c ../../test_setup.c
 medium_locker_LDADD=$(TLC_LIB) $(SCSI_LIB) $(ADMIN_LIB) $(DSS_LIB) $(STORE_LIB)
 medium_locker_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/tlc -I$(TO_SRC)/tlc/scsi \
-                     -I$(TO_SRC)/dss -I$(TO_TEST)
+                     -I$(TO_SRC)/core/dss -I$(TO_TEST)
