--- a/src/daemon/Makefile.am
+++ b/src/daemon/Makefile.am
@@ -3,4 +3,5 @@ AM_CFLAGS= $(CC_OPT)
 noinst_LTLIBRARIES=libpho_daemon.la
 
 libpho_daemon_la_SOURCES=daemon.c
-libpho_daemon_la_LIBADD=../cfg/libpho_cfg.la ../common/libpho_common.la
+libpho_daemon_la_LIBADD=../core/cfg/libpho_cfg.la \
+        ../core/common/libpho_common.la
