--- a/src/tlc/Makefile.am
+++ b/src/tlc/Makefile.am
@@ -14,12 +14,12 @@ EXTRA_DIST=$(unit_files)
 phobos_tlc_SOURCES=tlc.c tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c \
             scsi/scsi_api.h
 phobos_tlc_CFLAGS=$(AM_CFLAGS) -Iscsi
-phobos_tlc_LDADD=../dss/libpho_dss.la \
-          ../cfg/libpho_cfg.la \
-          ../common/libpho_common.la \
-          ../communication/libpho_comm.la \
+phobos_tlc_LDADD=../core/dss/libpho_dss.la \
+          ../core/cfg/libpho_cfg.la \
+          ../core/common/libpho_common.la \
+          ../core/communication/libpho_comm.la \
           ../daemon/libpho_daemon.la \
-          ../serializer/libpho_serializer.la \
+          ../core/serializer/libpho_serializer.la \
           scsi/libpho_scsi.la
 phobos_tlc_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
 
