make: one core to rule them all
Core sublibraries are now merged into a sole library, named
`libpho_core`, which will ease phobos development and avoid cyclic
dependencies.

Change-Id: If0001bed5ae239af3eebc01107ccb221ce57b68f
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14854
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -126,16 +126,13 @@ AC_SUBST(ac_configure_args)
 AC_CONFIG_FILES([Makefile
          src/Makefile
          src/include/Makefile
-         src/core/common/Makefile
          src/module-loader/Makefile
          src/ldm/Makefile
-         src/core/dss/Makefile
-         src/core/cfg/Makefile
          src/lrs/Makefile
          src/io/Makefile
          src/layout/Makefile
+         src/core/Makefile
          src/core/serializer/Makefile
-         src/core/communication/Makefile
          src/store/Makefile
          src/io-modules/Makefile
          src/layout-modules/Makefile
