--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -7,22 +7,17 @@ AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
 ADMIN_LIB=$(TO_SRC)/admin/libphobos_admin.la
-CFG_LIB=$(TO_SRC)/core/cfg/libpho_cfg.la
-COMMON_LIB=$(TO_SRC)/core/common/libpho_common.la
-COMMUNICATION_LIB=$(TO_SRC)/core/communication/libpho_comm.la
-DSS_LIB=$(TO_SRC)/core/dss/libpho_dss.la
+CORE_LIB=$(TO_SRC)/core/libpho_core.la
 LAYOUT_LIB=$(TO_SRC)/layout-modules/libpho_layout_raid1.la
 LDM_LIB=$(TO_SRC)/ldm/libpho_ldm.la
 LRS_LIB=$(TO_SRC)/lrs/libpho_lrs.la
 MOD_LOAD_LIB=$(TO_SRC)/module-loader/libpho_module_loader.la
 RAID1_LIB=$(TO_SRC)/layout-modules/libpho_layout_raid1.la
 SCSI_LIB=$(TO_SRC)/tlc/scsi/libpho_scsi.la
-SERIALIZER_LIB=$(TO_SRC)/core/serializer/libpho_serializer.la
 STORE_LIB=$(TO_SRC)/store/libphobos_store.la
 IO_LIB=$(TO_SRC)/io/libpho_io.la
 
-TESTS_LIB_DEPS=$(LRS_LIB) $(LDM_LIB) $(IO_LIB) $(DSS_LIB) $(SERIALIZER_LIB) \
-               $(CFG_LIB) $(COMMON_LIB)
+TESTS_LIB_DEPS=$(LRS_LIB) $(LDM_LIB) $(IO_LIB) $(CORE_LIB)
 TESTS_LIB=../../libpho_test_utils.la
 
 TESTS_INCLUDE=-I$(TO_SRC)/core/dss -I$(TO_SRC)/tlc -I$(TO_SRC)/tlc/scsi \
@@ -76,7 +71,7 @@ phobos_put_copy_LDADD=$(STORE_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 phobos_put_copy_CFLAGS=$(TESTS_INCLUDE)
 
 test_bad_comm_SOURCES=test_bad_comm.c
-test_bad_comm_LDADD=$(COMMUNICATION_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_bad_comm_LDADD=$(CORE_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_bad_comm_CFLAGS=$(TESTS_INCLUDE)
 
 test_concurrency_SOURCES=test_concurrency.c
