--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,4 @@
 AM_CFLAGS= $(CC_OPT)
 
-SUBDIRS=include core/serializer core/common core/communication module-loader \
-        ldm core/dss core/cfg daemon ldm-modules io io-modules layout store \
-        layout-modules admin lrs cli tlc
+SUBDIRS=include core module-loader ldm ldm-modules daemon \
+        io io-modules layout store layout-modules admin lrs cli tlc
