--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -7,12 +7,8 @@ AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
 ADMIN_LIB=$(TO_SRC)/admin/libphobos_admin.la
-CFG_LIB=$(TO_SRC)/core/cfg/libpho_cfg.la
-COMMON_LIB=$(TO_SRC)/core/common/libpho_common.la
-COMMUNICATION_LIB=$(TO_SRC)/core/communication/libpho_comm.la
-DSS_LIB=$(TO_SRC)/core/dss/libpho_dss.la
+CORE_LIB=$(TO_SRC)/core/libpho_core.la
 LRS_LIB=$(TO_SRC)/lrs/libpho_lrs.la
-SERIALIZER_LIB=$(TO_SRC)/core/serializer/libpho_serializer.la
 STORE_LIB=$(TO_SRC)/store/libphobos_store.la
 SCSI_LIB=$(TO_SRC)/tlc/scsi/libpho_scsi.la
 TLC_LIB=$(TO_SRC)/tlc/libpho_tlc.la
@@ -100,16 +96,14 @@ TESTS_ENVIRONMENT = HAVE_XXH128="@HAVE_XXH128@"
 TESTS=$(check_SCRIPTS)
 
 test_fair_share_SOURCES=test_fair_share.c
-test_fair_share_LDADD=$(DSS_LIB) $(COMMON_LIB) $(CFG_LIB) $(COMMUNICATION_LIB) \
-                      $(SERIALIZER_LIB) $(LRS_LIB)
+test_fair_share_LDADD=$(CORE_LIB) $(LRS_LIB)
 test_fair_share_CFLAGS=-I$(TO_TEST)
 
 lrs_simple_client_SOURCES=lrs_simple_client.c
-lrs_simple_client_LDADD=$(LRS_LIB) $(CFG_LIB) $(COMMON_LIB) \
-                        $(COMMUNICATION_LIB) $(SERIALIZER_LIB)
+lrs_simple_client_LDADD=$(LRS_LIB) $(CORE_LIB)
 lrs_simple_client_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs
 
 medium_locker_SOURCES=medium_locker.c ../../test_setup.c
-medium_locker_LDADD=$(TLC_LIB) $(SCSI_LIB) $(ADMIN_LIB) $(DSS_LIB) $(STORE_LIB)
+medium_locker_LDADD=$(TLC_LIB) $(SCSI_LIB) $(ADMIN_LIB) $(CORE_LIB) $(STORE_LIB)
 medium_locker_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/tlc -I$(TO_SRC)/tlc/scsi \
                      -I$(TO_SRC)/core/dss -I$(TO_TEST)
