cli: move LogsOptHandler to logs target directory
This patch moves the LogsOptHandler to the logs target directory.
Also, reorganizes the common/utils.py in alphabetical order and
removes unused imports in __init__.py files.

Change-Id: If07ee5f98e57e73dd3011dd87b7c20a41ed80335
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14895
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -9,8 +9,10 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/action/__init__.py \
 	   phobos/cli/action/add.py \
 	   phobos/cli/action/clean.py \
+	   phobos/cli/action/clear.py \
 	   phobos/cli/action/create.py \
 	   phobos/cli/action/delete.py \
+	   phobos/cli/action/dump.py \
 	   phobos/cli/action/format.py \
 	   phobos/cli/action/list.py \
 	   phobos/cli/action/lock.py \
@@ -29,6 +31,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/target/extent.py \
 	   phobos/cli/target/lib.py \
 	   phobos/cli/target/lock.py \
+	   phobos/cli/target/logs.py \
 	   phobos/cli/target/media.py \
 	   phobos/cli/target/object.py \
 	   phobos/cli/target/rados.py \
