packaging: remove noreplace on argument completion script
The argcomplete script should not be modified.

Change-Id: Ib00001414799e12164c51ad3299e50b34637f254
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14882
Reviewed-by: Quentin ANIÈRE <quentin.aniere@cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -170,7 +170,7 @@ register-python-argcomplete phobos > %{buildroot}/%{_sysconfdir}/bash_completion
 %{_mandir}/man1/*
 
 %config(noreplace) %{_sysconfdir}/phobos.conf
-%config(noreplace) %{_sysconfdir}/bash_completion.d/phobos-argcomplete.sh
+%config %{_sysconfdir}/bash_completion.d/phobos-argcomplete.sh
 %dir %{phobosdocdir}
 %doc %{phobosdocdir}/README.md
 %doc %{phobosdocdir}/template.conf
