cli: move UndeleteOptHandler to store target directory
Change-Id: I3d542123c52e8e41a2eb4b6772c53fe626dc07ec
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14899
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -23,6 +23,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/action/put.py \
 	   phobos/cli/action/resource_delete.py \
 	   phobos/cli/action/status.py \
+	   phobos/cli/action/undelete.py \
 	   phobos/cli/action/unlock.py \
 	   phobos/cli/common/__init__.py \
 	   phobos/cli/common/args.py \
