cli: move LocateOptHandler to store target directory
Change-Id: I3d2594e96f1009eaa6f011cb02be7609d2f6f7fe
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14901
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -17,6 +17,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/action/get.py \
 	   phobos/cli/action/getmd.py \
 	   phobos/cli/action/list.py \
+	   phobos/cli/action/locate.py \
 	   phobos/cli/action/lock.py \
 	   phobos/cli/action/mput.py \
 	   phobos/cli/action/ping.py \
